# DMA2024TeamC

./: .gitignore  Datenbank.ipynb  ETL2Datawarehouse.ipynb  README.md  app.js  create_statements_db.sql  index.html
Code/: DWH_Visualisierung.ipynb  Datenbank.ipynb  EDA.ipynb  EDA_w_outputs.ipynb  ETL2Datawarehouse.ipynb  ETL2Datawarehouse_GS.ipynb  ETL2Datawarehouse_ML.ipynb  Observations.tfl  create_statements_db.sql  medications.tfl  pyproject.toml
Code/Tableau/: Fact_table.tfl  immunizations.tfl  procedures.tfl
Code/old/: EDA.ipynb  EDA_w_outputs.ipynb  ETL2Datawarehouse.ipynb
Data/: Fact_table.csv
Data/CALICO_MA_Database/: CALICO_MA.db-journal
Data/Tableau/: facts_table_complete_ZIP.csv
Documentation/: Dictionary_EncountersCSV.doc  Dictionary_ImmunizationsCSV.doc  Dictionary_MedicationsCSV.doc  Dictionary_ObservationsCSV.doc  Dictionary_PatientsCSV.doc  Dictionary_ProceduresCSV.doc  Git Workflow Dokumentation.md  mermaid_flowchart.md
Documentation/EDA/: EDA.txt
Gunnar_test/database/CALICO_MA/: Datenbank.ipynb  ETL Stichworte.docx
Gunnar_test/database/CALICO_MA/Data_source/: medications.csv  patients.csv  procedures.csv
Gunnar_test/database/CALICO_MA/Tableau Flow Files/: Fact_table.tfl  Patients.tfl  encounters.tfl
Gunnar_test/datamanegment/: EDA.ipynb  EDA_w_outputs.ipynb  ETL2Datawarehouse.ipynb  ETL2Datawarehouse_GS.ipynb  ETL2Datawarehouse_ML.ipynb  pyproject.toml
